--- a/rango_edades.css
+++ b/rango_edades.css
@@ -65,7 +65,7 @@ h1{
 }
 
 .obtener{
-    background-color: green;
+    background-color: rgb(13, 236, 13);
     color: white;
     cursor: pointer;
 }
